improve logic moments